src/test/testData/parser/error/inImport.lama
import 10;

fun array_to_list () {
  a[a[5] - 5]
}